# bookwith

./: eslint.config.js
apps/api/: HUGGINGFACE_SETUP.md  OLLAMA_SETUP.md  docker-compose.yml  pyproject.toml
apps/api/src/config/: .env.example  app_config.py  seed.py
apps/api/src/domain/annotation/: exceptions.py
apps/api/src/domain/annotation/entities/: annotation.py
apps/api/src/domain/annotation/repositories/: annotation_repository.py
apps/api/src/domain/annotation/value_objects/: __init__.py  annotation_id.py  annotation_notes.py  annotation_text.py  annotation_type.py
apps/api/src/domain/book/entities/: book.py
apps/api/src/domain/book/exceptions/: book_exceptions.py
apps/api/src/domain/book/value_objects/: book_id.py  book_metadata.py  book_title.py
apps/api/src/domain/chat/entities/: chat.py
apps/api/src/domain/chat/repositories/: chat_repository.py
apps/api/src/domain/message/entities/: message.py
apps/api/src/domain/message/exceptions/: message_exceptions.py
apps/api/src/infrastructure/: vector.py
apps/api/src/infrastructure/llm/: huggingface_client.py
apps/api/src/infrastructure/memory/: base_vector_store.py  book_annotation_store.py  chat_memory_store.py  collection_manager.py  memory_retrieval_service.py  memory_vector_store.py  prompt_builder_service.py  retry_decorator.py  summarization_service.py  vectorization_service.py
apps/api/src/usecase/annotation/: update_annotation_use_case.py
apps/api/src/usecase/book/: create_book_usecase.py  create_book_vector_index_usecase.py  delete_book_usecase.py  find_book_by_id_usecase.py
apps/api/src/usecase/chat/: create_chat_usecase.py  delete_chat_usecase.py  find_chat_by_id_usecase.py  find_chats_by_user_id_and_book_id_usecase.py  find_chats_by_user_id_usecase.py  update_chat_title_usecase.py
apps/api/src/usecase/message/: ai_response_generator.py  chat_manager.py  citation_parser.py  create_message_usecase.py  delete_message_usecase.py  find_message_by_id_usecase.py  find_messages_usecase.py  highlight_searcher.py  message_processor.py
docs/: ARCHITECTURE.md
(+46 files in other folders)
